--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "cheerio": "^0.17.0",
+    "htmlparser": "^1.7.7",
     "hubot": ">= 2.6.0 < 3.0.0",
     "hubot-hipchat": "^2.7.5",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
