--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "cheerio": "^0.17.0",
     "htmlparser": "^1.7.7",
     "hubot": ">= 2.6.0 < 3.0.0",
+    "hubot-business-cat": "^1.1.16",
     "hubot-hipchat": "^2.7.5",
+    "hubot-plusplus": "^1.1.3",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "scraper": "0.0.9"
   },
