--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hubot-business-cat": "^1.1.16",
     "hubot-hipchat": "^2.7.5",
     "hubot-plusplus": "^1.1.3",
+    "hubot-redis-brain": "0.0.3",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "hubot-slack": "^3.3.0",
     "hubot-soundcloud": "0.0.1",
