--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "htmlparser": "^1.7.7",
     "hubot": ">= 2.6.0 < 3.0.0",
     "hubot-business-cat": "^1.1.16",
+    "hubot-heroku-keepalive": "0.0.4",
     "hubot-hipchat": "^2.7.5",
     "hubot-plusplus": "^1.1.3",
     "hubot-redis-brain": "0.0.3",
